--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,8 +1,13 @@
 {
 	"compilerOptions": {
-	  "target": "es5",
+	  "strict": true,
+	  "target": "es6",
+	  "module": "es6",
 	  "lib": ["es5", "dom"],
-	  "types": ["cypress"]
+	  "types": ["cypress"],
+	  "allowJs": true
 	},
-	"include": ["**/*.ts"]
+	"include": [
+	  "**/*.ts"
+	]
   }
