--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/naumowicz/cypress-test#readme",
   "devDependencies": {
+    "@cypress/webpack-preprocessor": "^5.9.1",
     "cypress": "^8.0.0",
     "cypress-cucumber-preprocessor": "^4.1.4",
-    "typescript": "^4.3.5"
+    "ts-loader": "^9.2.3",
+    "typescript": "^4.3.5",
+    "webpack": "^5.45.1"
   }
 }
